VSE: UI does not immediatelly reflect new length of effect strip #37690

Closed
opened 2013-12-03 14:25:23 +01:00 by Willi · 6 comments

System Information
Win7/64, AMD HD 6850 (latest driver)

Blender Version
Broken: Blender 2.69.3 ab49437 (64 bits)
Worked: Never. :) Tried several versions back to 2.4 where strip cutting has been introduced.

Short description of error
After cutting a movie strip (Shift+K), the UI is not updated immediatelly to reflect the new length of associated effect strips

Exact steps for others to reproduce the error

  1. Add a movie strip to the VSE
  2. Add a "speed control" effect strip to the movie strip
  3. Cut the movie strip (Shift+K) anywhere in the middle

The speed control strip has been shortened by cutting the movie strip, too, but the UI doesn't reflect this change immediatelly. At least you have to press the G key to update the display.

**System Information** Win7/64, AMD HD 6850 (latest driver) **Blender Version** Broken: Blender 2.69.3 ab49437 (64 bits) Worked: Never. :) Tried several versions back to 2.4 where strip cutting has been introduced. **Short description of error** After cutting a movie strip (Shift+K), the UI is not updated immediatelly to reflect the new length of associated effect strips **Exact steps for others to reproduce the error** 1. Add a movie strip to the VSE 2. Add a "speed control" effect strip to the movie strip 3. Cut the movie strip (Shift+K) anywhere in the middle The speed control strip has been shortened by cutting the movie strip, too, but the UI doesn't reflect this change immediatelly. At least you have to press the G key to update the display.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @willi-2

Added subscriber: @willi-2
Sergey Sharybin self-assigned this 2013-12-03 17:41:37 +01:00

This issue was referenced by blender/blender-addons-contrib@04e434cd81

This issue was referenced by blender/blender-addons-contrib@04e434cd81edf942289f7094bc5fdc3ab8846259

This issue was referenced by 04e434cd81

This issue was referenced by 04e434cd81edf942289f7094bc5fdc3ab8846259

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 04e434cd81.

Closed by commit 04e434cd81.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#37690
No description provided.