Fix T37690: UI does not immediatelly reflect new length of effect strip